[package]
name = "speculo"
version = "0.1.0"
authors = ["x0rz3q <jacob@x0rz3q.com>"]
edition = "2018"
license=" AGPL-3.0-only"
description="Manage git mirrors"
documentation="https://x0rz3q.com/posts/speculo"
homepage="https://x0rz3q.com/posts/speculo"

[dependencies]

[profile.release]
opt-level = 3
