[package]
name = "speculo"
version = "0.2.0"
authors = ["x0rz3q <jacob@x0rz3q.com>"]
edition = "2018"
license="GPL-3.0-only"
description="Manage git mirrors"
documentation="https://x0rz3q.com/posts/speculo"
homepage="https://x0rz3q.com/posts/speculo"

[dependencies]
clap = "2.33.0"

[profile.release]
opt-level = 3
